<resources>
    <string name="app_name">Pointer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assalomu_alaykum_pointerga_hush_kelibsiz">Assalomu alaykum Pointerga hush kelibsiz!</string>
    <string name="full_news_title">Avero amerika startapi 3D-printer orqali elektrovelosipedlarni chiqarishini yo‘lga qo‘yadi</string>
    <string name="full_news_desc">"Avero amerika startapi 3D-printer orqali elektrovelosipedlarni chiqarishini yo‘lga qo‘ymoqchi. Ushbu tovarni joriy yil oxirlarida sotuvga chiqarilishni rejalashtirmoqda.   Elektrovelosipedlarning ikkita rusumi ishlab chiqarilishi mo‘ljallanmoqda. Superstrata Terra nomli rusumli elektrovelosipedi oddiy velosipedning analogi bo‘lib, $2799 teng narxda sotiladi. O‘z navbatida, Superstrata Ion rusumli elektrovelosiped o‘z ko‘rinishida elektrobayk bo‘lib, 250 Vatt quvvatiga teng dvigatelga, 252 Vtch sig‘imga ega akkumulyator batareyaga ega bo‘lib, 100 km ga uzoqlik masofagacha yura oladi. Superstrata Ion’ning narxi $3999 ni tashkil  qiladi.  Yana bir muhim jihat: elektrovelosipedlarning karkasi yaxlit termoplastik uglevodorodli toladan yasaladi. Bu esa mahsulotning o‘ta mustahkamligini va yengillini ta’minlaydi. Masalan, Terra rusumli elektrovelosiped ramasining og‘irligi atigi 1,3 kiloga, Ion rusumli elektrovelosipedning og‘irligi esa 11 kiloga teng keladi.oshlar uchun....  One Netbook muhandis va IT-mutahassislar uchun gibridli mini noutbukni ishlab chiqarmoqchi  O‘ta yengil kompyuterlarni ishlab chiqarishga ixtisoslashgan One Netbook kompaniyasi muhandis va IT-mutahassislar uchun mini noutbukni ishlab chiqarishni rejalashtirmoqda.   Mazkur mini noutbuk 7 dyuymli sensor display bilan jihozlanib, uni maxsus bog‘lash moslamasi orqali 180  gradusga aylantirib planshetga o‘zgartirsa bo‘ladi. Mazkur noutbukga  Windows 10 operatsion tizimi o‘rnatiladi.   "</string>
    <string name="settings">Sozlamalar</string>
    <string name="change_lang">Tilni o\'zgartirish</string>
    <string name="uzb_lang">O\'zbekcha</string>
    <string name="personal_information">Shaxsiy ma\'lumotlar</string>
    <string name="tv_night">Tungi holatni yoqish</string>
    <string name="tv_log_out">Akkauntdan chiqish</string>
    <string name="tv_info">Dastur haqida</string>
    <string name="name">Ismi</string>
    <string name="full_name">Familiyasi</string>
    <string name="father_name">Otasining ismi</string>
    <string name="email">Email</string>
    <string name="phone">Telefon raqami</string>
    <string name="password">Parol</string>
    <string name="lan">Tilni tanlang</string>
    <string name="cancel">Bekor qilish</string>
    <string name="ok">Ok</string>
    <string name="news_title1">Yoshlarni yangi o’quv yiliga tayyorlash</string>
    <string name="news_desc1">Avero amerika startapi 3D-printer orqali elektrovelosipedlarni chiqarishini yo‘lga qo‘ymoqchi. Ushbu tovarni joriy yil oxirlarida sotuvga chiqarilishni rejalashtirmoqda.

Elektrovelosipedlarning ikkita rusumi ishlab chiqarilishi mo‘ljallanmoqda. Superstrata Terra nomli rusumli elektrovelosipedi oddiy velosipedning analogi bo‘lib, $2799 teng narxda sotiladi. O‘z navbatida, Superstrata Ion rusumli elektrovelosiped o‘z ko‘rinishida elektrobayk bo‘lib, 250 Vatt quvvatiga teng dvigatelga, 252 Vtch sig‘imga ega akkumulyator batareyaga ega bo‘lib, 100 km ga uzoqlik masofagacha yura oladi. Superstrata Ion’ning narxi $3999 ni tashkil  qiladi.

Yana bir muhim jihat: elektrovelosipedlarning karkasi yaxlit termoplastik uglevodorodli toladan yasaladi. Bu esa mahsulotning o‘ta mustahkamligini va yengillini ta’minlaydi. Masalan, Terra rusumli elektrovelosiped ramasining og‘irligi atigi 1,3 kiloga, Ion rusumli elektrovelosipedning og‘irligi esa 11 kiloga teng keladi.oshlar uchun....
One Netbook muhandis va IT-mutahassislar uchun gibridli mini noutbukni ishlab chiqarmoqchi

O‘ta yengil kompyuterlarni ishlab chiqarishga ixtisoslashgan One Netbook kompaniyasi muhandis va IT-mutahassislar uchun mini noutbukni ishlab chiqarishni rejalashtirmoqda.

Mazkur mini noutbuk 7 dyuymli sensor display bilan jihozlanib, uni maxsus bog‘lash moslamasi orqali 180  gradusga aylantirib planshetga o‘zgartirsa bo‘ladi. Mazkur noutbukga  Windows 10 operatsion tizimi o‘rnatiladi.

 </string>
    <string name="news">Yangiliklar</string>
    <string name="ru_lang">Русский</string>
    <string name="en_lang">English</string>
    <string name="training_title">UX/UI bo’yicha master klass</string>
</resources>