<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".fragments.personalInfo.PersonalInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center|start">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/vector" />

            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/personal_information"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/back_linear_per_info"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_personal"
                android:layout_width="100dp"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:padding="4dp"
                android:src="@drawable/oval_img"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pencil_svg"
                app:layout_constraintBottom_toBottomOf="@id/iv_personal"
                app:layout_constraintEnd_toEndOf="@id/iv_personal" />

            <LinearLayout
                android:id="@+id/linear_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_linear_info_edit"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/iv_personal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="#BDBDBD"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:text="Davronbek"
                    android:textColor="#373737"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_full_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_linear_info_edit"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear_name">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/full_name"
                    android:textColor="#BDBDBD"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_fullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:text="Sherg'oziyev"
                    android:textColor="#373737"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_father_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_linear_info_edit"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear_full_name">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/father_name"
                    android:textColor="#BDBDBD"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_fatherName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:text="Aliqul o'g'li"
                    android:textColor="#373737"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_linear_info_edit"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear_father_name">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textColor="#BDBDBD"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:text="+99894 892 77 88"
                    android:textColor="#373737"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_linear_info_edit"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear_phone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textColor="#BDBDBD"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:text="davronbekprogrammer@gmail.com"
                    android:textColor="#5169FF"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_linear_info_edit"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear_email">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textColor="#BDBDBD"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="start"
                    android:inputType="textPassword"
                    android:text="123456"
                    android:textColor="#5169FF"
                    android:textSize="14sp"
                    android:singleLine="true" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:shadowColor="#01D8D0"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#01D8D0"
                android:text="O'zgarishni saqlash"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>